--- a/CodeMageSpigotPython/plugin.yml
+++ b/CodeMageSpigotPython/plugin.yml
@@ -6,3 +6,7 @@ commands:
     description: Run python command
     usage: |
       /python
+  blink:
+    description: Run blink command
+    usage: |
+      /bl
