--- a/CodeMageSpigotPython/.classpath
+++ b/CodeMageSpigotPython/.classpath
@@ -8,6 +8,6 @@
 			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jython.jar"/>
+	<classpathentry kind="lib" path="lib/jython.jar" sourcepath="/codemage-jython/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
