--- a/CodeMageSpigotDDP/.classpath
+++ b/CodeMageSpigotDDP/.classpath
@@ -2,10 +2,20 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.springsource.ide.eclipse.gradle.classpathcontainer"/>
 	<classpathentry kind="lib" path="lib/spigot-api-1.8.8-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="includedLibs/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="includedLibs/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="includedLibs/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="includedLibs/hamcrest-all-1.1.jar"/>
+	<classpathentry kind="lib" path="includedLibs/java-ddp-client-1.0.0.2.jar"/>
+	<classpathentry kind="lib" path="includedLibs/Java-WebSocket-1.3.0.jar"/>
+	<classpathentry kind="lib" path="includedLibs/lambdaj-2.3.3.jar"/>
+	<classpathentry kind="lib" path="includedLibs/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="includedLibs/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="includedLibs/slf4j-simple-1.7.12.jar"/>
+	<classpathentry kind="lib" path="includedLibs/srp6a-1.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
