--- a/CodeMageSpigotPython/plugin.yml
+++ b/CodeMageSpigotPython/plugin.yml
@@ -10,3 +10,7 @@ commands:
     description: Run blink command
     usage: |
       /bl
+  reconnectddp:
+    description: Reconnects to Meteor
+    usage: |
+      /reconnectddp 
