--- a/CodeMageSpigotPython/plugin.yml
+++ b/CodeMageSpigotPython/plugin.yml
@@ -14,3 +14,7 @@ commands:
     description: Reconnects to Meteor
     usage: |
       /reconnectddp 
+  reloadwrappers:
+    description: Reloads the gamewrappers
+    usage: |
+      /reloadwrappers
